[project]
name = "coursework3"
version = "0.1.0"
description = ""
authors = [
    {name = "EldarIsak",email = "Isakzhanov186@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
